# bots

./: .gitignore  CMakeLists.txt  README.md  package.xml
blender/: cart.blend  wheel.blend
config/: diffbot.yaml
gazebo/: golem_gz.xacro  gz_bocbot.xacro  gz_cart_effort.xacro  gz_cart_position.xacro  gz_cart_velocity.xacro  gz_diffbot.xacro  gz_golem.xacro  gz_gripper.xacro  gz_kr120r2500pro.xacro  gz_kr16_2.xacro  gz_kr3r540.xacro  gz_kr5_arc.xacro  gz_lbr_iiwa_14_r820.xacro  gz_pxm3.xacro  gz_razbot.xacro  gz_rrbot.xacro  gz_skidbot.xacro  gz_tb3_burger.xacro  gz_tb3_waffle.xacro  gz_tb3_waffle_pi.xacro  gz_twr.xacro  pxm3_gz.xacro
launch/: 2wr_empty.launch .py  basic_world.launch.py  cart_effort.launch.py  cart_position.launch.py  cart_velocity.launch.py  empty_world.launch.py  gazebo_basic_world.launch.py  gazebo_empty_world.launch.py  gazebo_pxm3_basic_world.launch.py  gazebo_tb3_waffle_pi_empty_world.launch.py  gazebo_twr_basic_world.launch.py  golem.launch.py  gripper.launch.py  gz_basic_world.launch.py  gz_bocbot.launch.py  gz_cart_effort.launch.py  gz_cart_position.launch.py  gz_diffbot.launch.py  gz_diffbot_basic.launch.py  gz_empty_world.launch.py  gz_golem.launch.py  gz_golem_basic_world.launch.py  gz_gripper.launch.py  gz_kr120r2500pro.launch.py  gz_kr120r2500pro_empty.launch.py  gz_kr16_2.launch.py  gz_kr16_2_empty.launch.py  gz_kr3r540.launch.py  gz_kr3r540_empty.launch.py  gz_kr5_arc.launch.py  gz_kr5_arc_basic.launch.py  gz_kr5_arc_empty.launch.py  gz_lbr_iiwa_14_r820.launch.py  gz_lbr_iiwa_14_r820_empty.launch.py  gz_pxm3.launch.py  gz_pxm3_basic.launch.py  gz_razbot.launch.py  gz_razbot_basic_world.launch.py  gz_rrbot.launch.py  gz_rrbot_basic.launch.py  (+71 more)
meshes/bocbot/: base.stl
meshes/cart/: cart.stl
meshes/diffbot/: base.blend  base.stl  wheel.dae
meshes/skidbot/: wheel.blend1
meshes/twr/: robot_base.stl
models/2wr/: model.sdf
models/bocbot/: model.sdf
models/bocbot/diffbot/: model.config
models/cart/: model.config  model.sdf
models/diffbot/: model.config  model.sdf
models/golem/: model.config  model.sdf
models/gripper/: model.config  model.sdf
models/kr120r2500pro/: model.config  model.sdf
models/kr16_2/: model.sdf
models/kr3r540/: model.config  model.sdf
models/kr5_arc/: model.config  model.sdf
models/lbr_iiwa_14_r820/: model.config  model.sdf
models/pxm3/: model.config  model.sdf
models/razbot/: model.config  model.sdf
models/rrbot/: model.config  model.sdf
models/skidbot/: model.config  model.sdf
models/tb3_burger/: model.config  model.sdf
models/tb3_waffle/: model.config  model.sdf
models/tb3_waffle_pi/: model.config  model.sdf
models/twr/: model.config  model.sdf
r2c/: r2c_cart_effort.xacro  r2c_cart_position.xacro  r2c_cart_velocity.xacro  r2c_diffbot.xacro  r2c_gripper.xacro  r2c_rrbot.xacro  r2c_skidbot.xacro
ros2_control/: empty.xacro  r2c_diffbot.xacro  r2c_rrbot.xacro
rviz/: bocbot.rviz  diffbot.rviz  diffbot_view.rviz  golem.rviz  kr120r2500pro.rviz  kr3r540.rviz  kr5_arc.rviz  lbr_iiwa_14_r820.rviz  pxm3.rviz  razbot.rviz  rrbot.rviz  skidbot.rviz  tb3_burger.rviz  tb3_waffle.rviz  tb3_waffle_pi.rviz  twr.rviz
scripts/: effort.py  gripper_effort.py  py_node.py  urdf_to_sdf.sh  velocity.py  xacro_to_urdf.sh  xacro_urdf_sdf.sh
src/: cart_effort.cpp  cart_position.cpp  cpp_node.cpp  gripper.cpp  velocity.cpp
urdf/: bocbot.urdf  cart.urdf  diffbot.urdf  golem.urdf  golem.xacro  gripper.urdf  kr120r2500pro.urdf  kr16_2.urdf  kr3r540.urdf  kr5_arc.urdf  lbr_iiwa_14_r820.urdf  pxm3.urdf  razbot.urdf  rrbot.urdf  skidbot.urdf  tb3_burger.urdf  tb3_burger.xacro  tb3_waffle.urdf  tb3_waffle.xacro  tb3_waffle_pi.urdf  twr.urdf
worlds/: basic.world  boc_office.world  bocbot.world  diffbot.world  empty.world  golem.world  kr16_2.world  kr3r540.world  kr5_arc.world  lbr_iiwa_14_r820.world  pxm3.world  razbot.world  rrbot.world  skidbot.world  tb3_burger.world  tb3_waffle.world  tb3_waffle_pi.world  twr.world
xacro/: bocbot.xacro  cart.xacro  cart_effort.xacro  cart_position.xacro  cart_velocity.xacro  common_colours.xacro  common_kuka_materials.xacro  common_materials.xacro  common_rviz_materials.xacro  diffbot.xacro  golem.xacro  gripper.xacro  kr120r2500pro.xacro  kr16_2.xacro  kr3r540.xacro  kr5_arc.xacro  lbr_iiwa_14_r820.xacro  pxm3.xacro  razbot.xacro  rrbot.xacro  rrbot_gz.xacro  rrbot_r2c.xacro  skidbot.xacro  tb3_burger.xacro  tb3_waffle.xacro  tb3_waffle_pi.xacro  twr.xacro  urdf_cart.xacro  urdf_diffbot.xacro  urdf_gripper.xacro  urdf_rrbot.xacro  urdf_skidbot.xacro
