<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

<!-- Muthanna Alwahash 2022 -->

  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>robot_gazebo</description>
  <maintainer email="mkhuthir@gmail.com">mkhuthir</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros           </exec_depend>
  <exec_depend>rviz                 </exec_depend>
  <exec_depend>xacro                </exec_depend>
  <exec_depend>ros2launch           </exec_depend>

  <test_depend>ament_lint_auto    </test_depend>
  <test_depend>ament_lint_common  </test_depend>

  <export>
    
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.."/>

    <build_type>ament_cmake</build_type>

  </export>

</package>
